--- a/BookRide/src/main/resources/templates/forgot_password.html
+++ b/BookRide/src/main/resources/templates/forgot_password.html
@@ -335,23 +335,27 @@ body {
           
           <!-- Image Row -->
           <div class="col-12 mb-3">
-            <img th:src="@{'/img/profile_img/' + ${users[iterStat.index].profileImage}}"
+            <!-- Check if index is within bounds for users -->
+            <img th:src="@{'/img/profile_img/' + ${users[iterStat.index % users.size()].profileImage}}"
                  class="rounded-circle mx-auto d-block"
                  alt="User"
                  style="width: 150px; height: 150px;">
-            <h5 class="mt-2 text-success">[[${users[iterStat.index].firstName}]] [[${users[iterStat.index].lastName}]]</h5>
+            <h5 class="mt-2 text-success">
+              <!-- Display user names based on index -->
+              <span th:text="${users[iterStat.index % users.size()].firstName}">First Name</span> 
+              <span th:text="${users[iterStat.index % users.size()].lastName}">Last Name</span>
+            </h5>
           </div>
           
           <!-- Feedback Description and Rating Row -->
           <div class="col-12">
-            <p class="mt-3 text-warning">[[${f.description}]]</p>
-            <p class="text-primary">Rating: [[${f.rating}]] ⭐</p>
+            <p class="mt-3 text-warning" th:text="${f.description}">Feedback description</p>
+            <p class="text-primary">Rating: <span th:text="${f.rating}">Rating</span> ⭐</p>
           </div>
 
         </div>
       </div>
     </div>
-
 
     <!-- Carousel Controls -->
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
