--- a/BookRide/src/main/resources/templates/forgot_password.html
+++ b/BookRide/src/main/resources/templates/forgot_password.html
@@ -166,21 +166,21 @@ body {
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 					
-					<li class="nav-item"><a class="nav-link" href="/products"><i
-							class="fas fa-box-open"></i> Products</a></li>
-						
+					
    
-   
+   <th:block th:if="${user==null}">
 <!-- Example single danger button -->
 <li class="nav-item dropdown"><a
 						class="nav-link dropdown-toggle" href="#" role="button"
 						data-bs-toggle="dropdown" aria-expanded="false"><i
-							class="fa-solid fa-layer-group text-primary"></i> Category </a>
+							class="fa-solid fa-layer-group text-primary"></i> Location </a>
 						<ul class="dropdown-menu bg-info shadow-lg">
 							<li th:each="c:${categorys}"><a class="dropdown-item"
 								th:href="@{'/products?category='+${c.name}}">[[${c.name}]]</a></li>
 
 						</ul></li>
+						
+						</th:block>
 
 				</ul>
 				<ul class="navbar-nav ms-auto">
@@ -376,10 +376,10 @@ body {
 		<div class="container">
 			<div class="row">
 
-				<p class="text-center fs-4">Category</p>
+				<p class="text-center fs-4">Location</p>
 
 
-				<div class="col-md-2" th:each="c:${category}">
+				<div class="col-md-2" th:each="c:${categorys}">
 					<div
 						class="card  rounded-circle  shadow-lg p-3 mb-5 bg-info rounded">
 						<div class="card-body text-center">
@@ -423,57 +423,7 @@ body {
 		<!-- End Category Module -->
 
 
-		<!-- Start Latest product -->
-
-		<div class="container">
-			<div class="row">
-
-				<p class="text-center fs-4">Latest Product</p>
-
-
-				<div class="col-md-2" th:each="p:${products}">
-					<div
-						class="card    shadow-lg p-3 mb-5 bg-primary rounded">
-						<div class="card-body text-center">
-
-
-							<img alt="" th:src="@{'img/product_img/'+${p.image}}" class=""
-								width="65%" height="140px">
-							<p class="text-center">
-								<a th:href="@{'/product/'+${p.id}}" class="text-decoration-none text-dark">[[${p.title}]]</a>
-							</p>
-						</div>
-
-
-
-
-					</div>
-
-
-
-
-				</div>
-
-
-			</div>
-
-
-
-
-
-
-		</div>
-
-
-
-
-
-
-
-
-
-		<!-- End Latest product -->
-
+		
 
 
 
