--- a/BookRide/src/main/resources/templates/index.html
+++ b/BookRide/src/main/resources/templates/index.html
@@ -166,27 +166,35 @@ body {
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 					
-					<li class="nav-item"><a class="nav-link" href="/products"><i
-							class="fas fa-box-open"></i> Products</a></li>
+				<!-- 	<li class="nav-item"><a class="nav-link" href="/products"><i
+							class="fas fa-box-open"></i> Products</a></li>-->
 						
-   
+   	<th:block th:if="${user==null}">
    
 <!-- Example single danger button -->
 <li class="nav-item dropdown"><a
 						class="nav-link dropdown-toggle" href="#" role="button"
 						data-bs-toggle="dropdown" aria-expanded="false"><i
-							class="fa-solid fa-layer-group text-primary"></i> Category </a>
+							class="fa-solid fa-layer-group text-primary"></i> Location </a>
 						<ul class="dropdown-menu bg-info shadow-lg">
 							<li th:each="c:${categorys}"><a class="dropdown-item"
 								th:href="@{'/products?category='+${c.name}}">[[${c.name}]]</a></li>
 
 						</ul></li>
+						
+						</th:block>	
 
 				</ul>
+				
+				
 				<ul class="navbar-nav ms-auto">
 				
 				
 				<th:block th:if="${user==null}">
+				
+				
+				
+				
 					<li class="nav-item"><a class="nav-link" href="/register"><i
 							class="fas fa-user-plus"></i> Sign up</a></li>
 					<li class="nav-item"><a class="nav-link" href="/signin"><i
@@ -250,10 +258,10 @@ body {
 				<div class="col-lg-6">
 					<form method="post" action="/signup-landing">
 						<h3 class="display-6">Start your journey!</h3>
-						<div class="mb-3">
+						<!--<div class="mb-3">
 							<input type="email" class="form-control" id="inputEmail3"
 								placeholder="E-Mail" name="email" required>
-						</div>
+						</div>-->
 						<button type="button" class="btn btn-success btn-lg"
 							id="reserveButton" disabled>Reserve a Car</button>
 						<script>
@@ -340,10 +348,10 @@ body {
 		<div class="container">
 			<div class="row">
 
-				<p class="text-center fs-4">Category</p>
+				<p class="text-center fs-4">Location</p>
 
 
-				<div class="col-md-2" th:each="c:${category}">
+				<div class="col-md-2" th:each="c:${categorys}">
 					<div
 						class="card  rounded-circle  shadow-lg p-3 mb-5 bg-info rounded">
 						<div class="card-body text-center">
@@ -386,57 +394,6 @@ body {
 
 		<!-- End Category Module -->
 
-
-		<!-- Start Latest product -->
-
-		<div class="container">
-			<div class="row">
-
-				<p class="text-center fs-4">Latest Product</p>
-
-
-				<div class="col-md-2" th:each="p:${products}">
-					<div
-						class="card    shadow-lg p-3 mb-5 bg-primary rounded">
-						<div class="card-body text-center">
-
-
-							<img alt="" th:src="@{'img/product_img/'+${p.image}}" class=""
-								width="65%" height="140px">
-							<p class="text-center">
-								<a th:href="@{'/product/'+${p.id}}" class="text-decoration-none text-dark">[[${p.title}]]</a>
-							</p>
-						</div>
-
-
-
-
-					</div>
-
-
-
-
-				</div>
-
-
-			</div>
-
-
-
-
-
-
-		</div>
-
-
-
-
-
-
-
-
-
-		<!-- End Latest product -->
 
 
 
