--- a/BookRide/src/main/resources/templates/view_product.html
+++ b/BookRide/src/main/resources/templates/view_product.html
@@ -218,6 +218,11 @@
   <div class="floating-cart-btn">
     <i class="fas fa-shopping-cart"></i>
   </div>
+  
+  <script>   document.querySelector('.floating-cart-btn').addEventListener('click', function() {
+      window.location.href = '/user/book';
+  });
+</script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
